fixed sidebar issue by adding css for extra padding on left

--- a/hypothetical_transportation/frontend/src/components/adminPage/adminPage.css
+++ b/hypothetical_transportation/frontend/src/components/adminPage/adminPage.css
@@ -330,3 +330,7 @@ td {
   font-weight: 700;
   cursor: pointer;
 }
+
+.middle-content {
+  margin-left: 200px;
+}
